--- a/Frontend/src/components/Cards/cardProduto/styles.scss
+++ b/Frontend/src/components/Cards/cardProduto/styles.scss
@@ -27,16 +27,53 @@
     width: 60%;
 }
 
-.cardB {    
-    height: 27px;
-    cursor: pointer;
-    border: solid 0.7px #acacac;
-    border-radius: 0.6rem;
-    background-color: #FFFF;
-    font-size: 95%;
-    padding-left: 10px;
-    padding-right: 10px;
+.cardB2 {
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    width: fit-content;
+    padding: 0!important;
+    align-self: center;
+
+    & > input {
+        min-width: 3rem;
+        width: 3rem;
+        min-height: 2rem;
+        height: 2rem;
+        border: solid 1.5px #777777;
+        border-radius: .5rem;
+        margin: 0 .5rem;
+        outline: none;
+        box-sizing: border-box;
+        text-align: center;
+        font-size: 1rem;
+        user-select: none;
+    
+        
+        &::-webkit-inner-spin-button{
+            display: none;
+        }
+    }
+
+    & > button {
+        min-width: 2rem;
+        width: 2rem;
+        min-height: 2rem;
+        height: 2rem;
+        border: solid 1.5px #777777;
+        background-color: white;
+        border-radius: .5rem;
+        font-size: 1rem;
+        box-sizing: border-box;
+        cursor: pointer;
+    
+        &:hover{
+            color: #fff;
+            background-color: #000;
+        }
+    }
 }
+
 
 a:-webkit-any-link {
     text-decoration: none;
