--- a/Frontend/src/pages/main produto/style.css
+++ b/Frontend/src/pages/main produto/style.css
@@ -1,43 +1,41 @@
-.produtoMain {
+.fixed {
     display: flex;
     flex-direction: column;
-    padding: 1rem 1rem 0rem 1rem;
-    overflow: auto;
-    height: 100%;
-    width: 100%;
-    max-width: 560px;
-    box-sizing: border-box;
 }
+
 .produtoImg {
-    background-image: url("./../../assets/img/saladaBonita.png");
-    background-position: center;
-    background-size: 70%;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 10rem;
+    width: 35%;
+    height: 65%;
     border-radius: 5px;
     margin: 0.5rem 0;
+    margin-right: 5%;
+    margin-left: 5%;
     box-shadow: 4px 4px 2px rgba(170, 170, 170, 0.25);
     border-radius: 5px;
 }
-.detalhes {
-    margin: 1rem 0;
+
+.title {
+    margin: 2% 0 0 0;
 }
+
+.detalhes {
+    margin: 10% 0 0 0;
+}
+
 .preco {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
+    
+    margin: 10% 10% 10% 0%;
+    height: 5%;
     padding-bottom: 1rem;
 }
+
 .adicionarCarrinho {
-    display: flex;
-    flex-direction:column;
     background-color: #449944;
     color: white;
     width: 100%;
     padding: 1rem 0;
-    margin: auto auto 1rem;
+    margin: auto auto 0!important;
+    margin-top: 0!important;
     font-size: 1.5rem;
     text-align: center;
     text-decoration: none;
@@ -45,4 +43,11 @@
     box-shadow: 4px 4px 2px rgba(170, 170, 170, 0.5);
     border: none;
     border-radius: 8px;
+}
+
+.cardCarrinho3 {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
 }
