--- a/Frontend/src/pages/home/styles.scss
+++ b/Frontend/src/pages/home/styles.scss
@@ -16,11 +16,6 @@ main div{
 }
 
 .cardDiv {
-  display: grid;
-  flex-direction: row;
-  width: fit-content;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto auto;
-  grid-gap: 3.5rem;
-  margin: 0 auto;
+  display: flex;
+  width: 100%;
 }
