--- a/Frontend/src/pages/cart/styles.scss
+++ b/Frontend/src/pages/cart/styles.scss
@@ -11,6 +11,17 @@
 
 main div{
   padding: 0 1rem;
+  width: 100%;
   box-sizing: border-box;
 }
 
+.divAll {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.mi {
+  margin-left: 9rem;
+  margin-bottom: 2rem;
+}
